--- a/index.html
+++ b/index.html
@@ -20,31 +20,45 @@
     </header>
 
     <!-- Main content container -->
-    <div class="columns">
-        <div class="column">
+    <div class="columns is-multiline is-centered">
+        <div class="column is-narrow">
             <!-- Input field for the user to enter the dog breed -->
-            <input type="text" id="breedInput" placeholder="Enter Dog Breed">
+            <input class="has-background-info" type="text" id="breedInput" placeholder="Enter Dog Breed">
         </div>
-        <div class="column">
+        <div class="column is-narrow">
             <!-- Button to initiate the search -->
-            <button id="searchButton">Search</button>
+            <button class="has-background-info" id="searchButton">Search</button>
         </div>
     </div>
 
     <!-- Container for displaying dog image and stats -->
-    <div class="columns">
+    <div class="columns is-centered">
         <!-- Box for displaying dog image -->
-        <div class="column" id="dogImageBox">
+        <div class="column is-half is-flex is-flex-direction-column is-align-items-center is-justify-content-center" id="dogImageBox">
             <!-- Title for the Dog Image box -->
             <h3>Dog Image</h3>
             <!-- Dog Image will be displayed here -->
-            <p>placeholder for actual image</p>
+            <img src="https://media.discordapp.net/attachments/1166192628619038831/1169778620324134952/images.png?ex=6556a43c&is=65442f3c&hm=fe5025c98f6fbf4906ac5a37ca5c0244ffbf8a578c7f91865e9ca624a40dbc74&=&width=997&height=997" alt="doggy">
         </div>
         <!-- Box for displaying dog stats -->
         <div class="column" id="dogStatsBox">
-            <!-- Title for the Dog Stats box -->
             <h3>Dog Stats</h3>
-            <!-- Dog Stats will be displayed here -->
+            <div class="card">
+                <!-- Title for the Dog Stats box -->
+                <h4 class="card-header-title">Dog Name</h4>
+                <!-- Dog Stats will be displayed here -->
+                <ul class="card-content">
+                    <li class="content">
+                        Friendliness: --
+                    </li>
+                    <li class="content">
+                        Kid Friendly: --
+                    </li>
+                    <li class="content">
+                        Playful: --
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
