Stats now dynamically update

--- a/index.html
+++ b/index.html
@@ -48,14 +48,17 @@
                 <h4 class="card-header-title">Dog Name</h4>
                 <!-- Dog Stats will be displayed here -->
                 <ul class="card-content">
-                    <li class="content">
-                        Friendliness: --
+                    <li class="content" id="friendly">
+                        Friendliness: 
                     </li>
-                    <li class="content">
-                        Kid Friendly: --
+                    <li class="content" id="barking">
+                        Barking:
                     </li>
-                    <li class="content">
-                        Playful: --
+                    <li class="content" id="kids">
+                        Kid Friendly: 
+                    </li>
+                    <li class="content" id="playful">
+                        Playful: 
                     </li>
                 </ul>
             </div>
