--- a/index.html
+++ b/index.html
@@ -66,9 +66,13 @@
     <div class="columns">
         <!-- Container for random dog facts -->
         <div class="column">
-            <h2>Random Dog Facts</h2>
-            <!-- Random Dog Facts will be displayed here -->
-            <p id="randomDogFacts"></p>        
+            <div class="card">
+                <div class="card-content">
+                    <h2 class="content">Random Dog Facts</h2>
+                    <!-- Random Dog Facts will be displayed here -->
+                    <p class="content" id="randomDogFacts">Evidence from fossils suggests that five types of dog had evolved by the Bronze Age, around 4500BC. These were mastiffs, wolf-type dogs, dogs similar to greyhounds, pointing dogs and herding dogs. Bow wow!</p>
+                </div>
+            </div>
         </div>
         <!-- Container for buttons to save and view favorites -->
         <div class="column">
