finished handleStats function for real this time i swear guys

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h3>Dog Stats</h3>
             <div class="card">
                 <!-- Title for the Dog Stats box -->
-                <h4 class="card-header-title">Dog Name</h4>
+                <h4 class="card-header-title" id="name">Dog Name</h4>
                 <!-- Dog Stats will be displayed here -->
                 <ul class="card-content">
                     <li class="content" id="friendly">
