--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <title>Dog Breeds For You</title>
+    <link rel="icon" href="https://i1.sndcdn.com/artworks-t2WU7CqW5Zym6EGP-ggTdBQ-t500x500.jpg">
     <style>
         /* Add your CSS styles here */
     </style>
