Added stats values to HTML

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <div class="card">
                 <!-- Title for the Dog Stats box -->
                 <h4 class="card-header-title">Dog Name</h4>
+                    <h4>Values: Lowest = 1   Highest = 5</h4>
                 <!-- Dog Stats will be displayed here -->
                 <ul class="card-content">
                     <li class="content">
