--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="card-content">
                     <h2 class="content">Random Dog Facts</h2>
                     <!-- Random Dog Facts will be displayed here -->
-                    <p class="content" id="randomDogFacts">Evidence from fossils suggests that five types of dog had evolved by the Bronze Age, around 4500BC. These were mastiffs, wolf-type dogs, dogs similar to greyhounds, pointing dogs and herding dogs. Bow wow!</p>
+                    <p class="content" id="randomDogFacts"></p>
                 </div>
             </div>
         </div>
