--- a/index.html
+++ b/index.html
@@ -1,122 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./assets/css/reset.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <title>Dog Breeds For You</title>
+        <link rel="icon" href="https://i1.sndcdn.com/artworks-t2WU7CqW5Zym6EGP-ggTdBQ-t500x500.jpg">
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="reset" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-    <title>Dog Breeds For You</title>
-    <link rel="icon" href="https://i1.sndcdn.com/artworks-t2WU7CqW5Zym6EGP-ggTdBQ-t500x500.jpg">
-    <style>
-        /* Add your CSS styles here */
-    </style>
-</head>
+    <!--
+        Set body height to viewport height, specify elements as flexbox going down columns.
+        We set viewport height here for the footer as we want to align it to the very bottom. Flexbox properties are necessary since this is a "flexbox" behavior.
+    -->
+    <body class="is-flex is-flex-direction-column is-fullheight">
+        <header class="block">
+            <h1 class="has-text-centered">Dog Breeds For You</h1>
+        </header>
 
-<body>
-    <header>
-        <!-- Main title -->
-        <h1 class="has-text-centered">Dog Breeds For You</h1>
-    </header>
-
-    <!-- Main content container -->
-    <div class="columns is-multiline is-centered">
-        <div class="column is-narrow">
-            <!-- Input field for the user to enter the dog breed -->
-            <input type="text" id="breedInput" placeholder="Enter Dog Breed">
-        </div>
-        <div class="column is-narrow">
-            <!-- Button to initiate the search -->
-            <button id="searchButton">Search</button>
-        </div>
-    </div>
-
-    <!-- Container for displaying dog image and stats -->
-    <div class="columns is-centered">
-        <!-- Box for displaying dog image -->
-        <div class="column is-half is-flex is-flex-direction-column is-align-items-center is-justify-content-center" id="dogImageBox">
-            <!-- Title for the Dog Image box -->
-            <h3>Dog Image</h3>
-            <!-- Dog Image will be displayed here -->
-            <!-- <img src="https://media.discordapp.net/attachments/1166192628619038831/1169778620324134952/images.png?ex=6556a43c&is=65442f3c&hm=fe5025c98f6fbf4906ac5a37ca5c0244ffbf8a578c7f91865e9ca624a40dbc74&=&width=997&height=997" alt="doggy"> -->
-        </div>
-        <!-- Box for displaying dog stats -->
-        <div class="column" id="dogStatsBox">
-            <h3>Dog Stats</h3>
-            <div class="card">
-                <!-- Title for the Dog Stats box -->
-
-                <h4 class="card-header-title is-centered" id="name">Dog Name</h4>
-                <p class="has-text-centered">Values: Lowest = 1   Highest = 5</p>
-        
-                <!-- Dog Stats will be displayed here -->
-                <ul class="card-content">
-                    <li class="content" id="friendly">
-                        Friendliness: 
-                    </li>
-                    <li class="content" id="barking">
-                        Barking:
-                    </li>
-                    <li class="content" id="kids">
-                        Kid Friendly: 
-                    </li>
-                    <li class="content" id="playful">
-                        Playful: 
-                    </li>
-                </ul>
+        <!-- Division for the search input box and search button-->
+        <div class="block columns is-mobile">
+            <!-- This empty column centers the columns, because is-centered wasn't working -->
+            <div class="column is-one-fifth"></div>
+            <div class="column is-half">
+                <input class="input" type="text" placeholder="Enter Dog Breed" id="breedInput" />
+            </div>
+            <div class="column">
+                <button class="button" id="searchButton">Search</button>
             </div>
         </div>
-    </div>
 
-    <!-- Container for displaying random dog facts -->
-    <div class="columns">
-        <!-- Container for random dog facts -->
-        <div class="column">
-            <div class="card">
-                <div class="card-content">
-                    <h2 class="content">Random Dog Facts</h2>
-                    <!-- Random Dog Facts will be displayed here -->
-                    <p class="content" id="randomDogFacts"></p>
+        <!--
+            Main content with four cards containing information about the dog, and a fourth card with saved dog searches
+        -->
+        <main class="block">
+            <!--
+                is-multiline will move columns to next line, achieving a 2x2 layout.
+                I chose this over making two columns because i wanted order to be preserved when resizing to mobile.
+            -->
+            <div class="columns is-multiline">
+                <!--
+                    is-offset-1 adds a spacing to the beginning, because bulma specifies columns in "12" segments.
+                    First card that simply displays an image of the searched dog.
+                -->
+                <div class="column is-offset-1 is-5">
+                    <div class="card">
+                        <div class="card-header">
+                            <p class="card-header-title is-centered">Dog Image</p>
+                        </div>
+                        <div class="card-image">
+                            <!-- Calculated ratio to always be 3/2 from the API, so this is a safe assumption -->
+                            <figure class="image is-3by2" id="dogImageBox"></figure>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <!-- Container for buttons to save and view favorites -->
-        <div class="column">
-            <div class="columns saved">
-                <!-- Button to save dog image and stats -->
-                <div>
-                    <button class="column is-one-half" id="saveButton">Save</button>
+                <!--
+                    Because bulma divides it into columns of 12 segments, is-5 implies a final 1 column segment at the end, mirroring out is-offset-1 from earlier.
+                    Second card that displays stats about the dog, on a scale of 1-5.
+                -->
+                <div class="column is-5">
+                    <div class="card">
+                        <div class="card-header">
+                            <p class="card-header-title is-centered" id="name">Dog Name</p>
+                        </div>
+                        <div class="card-content">
+                            <div class="block">
+                                <ul>
+                                    <li class="block" id="friendly">Friendliness: </li>
+                                    <li class="block" id="playful">Playful: </li>
+                                    <li class="block" id="kids">Kid Friendly: </li>
+                                    <li class="block" id="barking">Barking: </li>
+                                </ul>
+                            </div>
+                            <div class="block columns">
+                                <div class="column">
+                                    <div class="is-flex is-justify-content-center">
+                                        <button class="button" id="saveButton">Save</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <!-- Button to view saved favorites -->
-                <div class="is-flex-direction-row-reverse has-text-centered">
-                    <h4 class="column">Saved Favorites</h4>
-                    <div id="favoritesButton">
-                        <ul>
-                            <button class="savedDogBtn">
-                                Dog One
-                            </button>
-                            <button class="savedDogBtn">
-                                Dog Two
-                            </button>
-                            <button class="savedDogBtn">
-                                Dog Three
-                            </button>
-                        </ul>
+                <!--
+                    Third card that will move to next line because is-offset-1 and is-5 equals 6, which would be too much for the previous line.
+                    This card pulls a random dog fact from an API.
+                -->
+                <div class="column is-offset-1 is-5">
+                    <div class="card">
+                        <div class="card-header">
+                            <p class="card-header-title is-centered">Dog Facts</p>
+                        </div>
+                        <div class="card-content" id="randomDogFacts"></div>
+                    </div>
+                </div>
+                <!--
+                    Fourth card that saves all our previous dog searches into a "list" (not actual html list) of buttons that can be pressed to return the first and second card states to their previous dogs.
+                -->
+                <div class="column is-5">
+                    <div class="card">
+                        <div class="card-header">
+                            <p class="card-header-title is-centered">Saved Favorites</p>
+                        </div>
+                        <div class="card-content">
+                            <div class="columns">
+                                <div class="buttons column" id="favButtons">
+                                    <button class="button">Dog One</button>
+                                    <button class="button">Dog Two</button>
+                                    <button class="button">Dog Three</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
+        </main>
 
-    <!-- Footer -->
-    <footer>
-        <p><pre>Made by the 🐶 Dog Gang</pre></p>   
-    </footer>
-  
-    <!-- jQuery library -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="./assets/js/script.js"></script>
-</body>
-
+        <!-- 
+            Footer that aligns to the very bottom of the screen.
+            This works because we set body viewport to 100vh through is-fullheight, while also telling it to behave like a flexbox.
+            Then finally, I tell it to align to the end and set an auto margin-top, which calculates the distance between the end of the main content and the bottom of the page, minus the amount of space needed for the footer to display.
+        -->
+        <footer class="is-align-items-flex-end mt-auto">
+            <p class="has-text-centered">Made by the 🐶 Dog Gang</p>
+        </footer>
+    
+        <!-- jQuery library -->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="./assets/js/script.js"></script>
+    </body>
 </html>
