--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
             <h1 class="has-text-centered">Dog Breeds For You</h1>
         </header>
 
+        <div id="rel" class="modal">
+            <!-- <div class="modal-background"></div> -->
+            <div class="modal-content">
+              <p>Did not recognize this dog breed. Please try again.</p>
+            </div>
+            <button id="modalButton" class="modal-close is-large" aria-label="close"></button>
+        </div>
+
         <!-- Division for the search input box and search button-->
         <div class="block columns is-mobile">
             <!-- This empty column centers the columns, because is-centered wasn't working -->
