minor changes to css to make it look better full screen

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                         </div>
                         <div class="card-image">
                             <!-- Calculated ratio to always be 3/2 from the API, so this is a safe assumption -->
-                            <figure class="image is-3by2" id="dogImageBox"></figure>
+                            <figure class="image is-3by2" id="dogImageBox">
+                                <img src="https://hips.hearstapps.com/hmg-prod/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg" alt="cute doggy in grass"/>
+                            </figure>
                         </div>
                     </div>
                 </div>
@@ -62,7 +64,7 @@
                 <div class="column is-5">
                     <div class="card">
                         <div class="card-header">
-                            <p class="card-header-title is-centered" id="name">Dog Name</p>
+                            <p class="card-header-title is-centered" id="name">Dog Breed</p>
                         </div>
                         <div class="card-content">
                             <p class="block is-centered is-flex is-justify-content-center">Values: Lowest = 1, Highest = 5</p>
@@ -74,10 +76,17 @@
                                     <li class="block" id="barking">Barking: </li>
                                 </ul>
                             </div>
-                            <div class="block columns">
+                            <div class="columns">
                                 <div class="column">
-                                    <div class="is-flex is-justify-content-center">
-                                        <button class="button" id="saveButton">Save</button>
+                                    <div class="block">
+                                        <div class="is-flex is-justify-content-center">
+                                            <button class="button" id="saveButton">Save</button>
+                                        </div>
+                                    </div>
+                                    <div class="block">
+                                        <div class="is-flex is-justify-content-center">
+                                            <img src="https://media.discordapp.net/attachments/1166192628619038831/1171597352079994981/DogGroup.jpg?ex=655d420f&is=654acd0f&hm=5cf168873a32aa1d7be28e508066a2ae824f94160aec2598fae71f9743aff507" alt="doggies hanging out" width="320" />
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -107,9 +116,6 @@
                         <div class="card-content">
                             <div class="columns">
                                 <div class="buttons column" id="favButtons">
-                                    <button class="button">Dog One</button>
-                                    <button class="button">Dog Two</button>
-                                    <button class="button">Dog Three</button>
                                 </div>
                             </div>
                         </div>
