add modal for informing user of errors

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
 
         <div id="rel" class="modal">
-            <!-- <div class="modal-background"></div> -->
+            <div class="modal-background"></div>
             <div class="modal-content">
               <p>Did not recognize this dog breed. Please try again.</p>
             </div>
@@ -137,6 +137,7 @@
     
         <!-- jQuery library -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
         <script src="./assets/js/script.js"></script>
     </body>
 </html>
